# tenancy-python

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/flametrench_tenancy/: __init__.py  errors.py  in_memory.py  postgres.py  store.py  types.py
tests/: postgres-schema.sql  test_conformance.py  test_in_memory.py  test_postgres.py
tests/conformance/fixtures/tenancy/: admin-remove.json  change-role.json  invitation-accept-binding.json  invitation-accept.json  list-orgs.json  org-name-slug.json  self-leave.json  transfer-ownership.json
