[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flametrench-tenancy"
version = "0.2.0"
description = "Tenancy primitives for Flametrench: organizations, memberships, and atomic invitation acceptance with the mem_/tup_ duality."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "NDC Digital, LLC" },
]
keywords = ["flametrench", "tenancy", "organizations", "memberships", "invitations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "flametrench-ids>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "psycopg[binary]>=3.1",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://flametrench.dev"
Repository = "https://github.com/flametrench/tenancy-python"
Specification = "https://github.com/flametrench/spec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
